--- a/Bootstrap 59/index.html
+++ b/Bootstrap 59/index.html
@@ -19,13 +19,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="home.html" target="content">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contactus.html" target="content">Contact Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="table.html" target="content">Table</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" aria-disabled="true">Disabled</a>
@@ -36,7 +36,7 @@
       </nav>
 
       <div style="height: 100vh;" >
-        <iframe src="" frameborder="0" name="content" height="100%" width="100%">
+        <iframe src="home.html" frameborder="0" name="content" height="100%" width="100%">
 
         </iframe>
       </div>
